--- a/vendor-login.html
+++ b/vendor-login.html
@@ -4,115 +4,194 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Vendor Login</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='6' y='6' width='52' height='52' rx='12' ry='12' fill='%23fff' stroke='%23f97316' stroke-width='2'/%3E%3Cpath fill='%23f97316' d='M18 14c4.2 0 7.6 3.4 7.6 7.6 0 3.2-1.8 6-4.6 7.1V46h-6V28.7c-2.8-1.1-4.6-3.9-4.6-7.1C10.4 17.4 13.8 14 18 14z'/%3E%3Cpath fill='%23ea580c' d='M34 14h4v10h2V14h4v10h2V14h4v12h-6v20h-6V26h-6z'/%3E%3C/svg%3E" />
+  <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;600;700&family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
-    html, body {
-      height: 100%;
+    :root {
+      --bg: #fff7ed;
+      --panel: #ffffff;
+      --panel-strong: #fff3e5;
+      --stroke: rgba(249,115,22,0.16);
+      --accent: #f97316;
+      --accent-2: #ea580c;
+      --text: #0c0c0c;
+      --muted: #4b5563;
+      --shadow: 0 18px 45px rgba(234,88,12,0.18);
+      --shadow-soft: 0 12px 30px rgba(234,88,12,0.14);
+      --blur: 14px;
+    }
+    * { box-sizing: border-box; }
+    body {
       margin: 0;
-      padding: 0;
-      font-family: 'Roboto', Arial, sans-serif;
       min-height: 100vh;
-      box-sizing: border-box;
-      background: transparent;
+      font-family: 'Space Grotesk', 'Inter', Arial, sans-serif;
+      color: var(--text);
+      background: radial-gradient(1400px at 12% 10%, rgba(249,115,22,0.12), transparent 45%),
+                  radial-gradient(1400px at 88% 16%, rgba(234,88,12,0.12), transparent 50%),
+                  linear-gradient(180deg, #fffaf5 0%, #fff4e8 45%, #ffefe1 100%);
+      display: grid;
+      place-items: center;
+      padding: 18px;
     }
-    .background {
-      position: fixed;
-      top: 0; left: 0;
-      width: 100vw; height: 100vh;
-      background-image: url('https://www.nottingham.edu.my/events/images-multimedia/25th-anniversary/banner-homepage-25th-anniversary.jpg');
-      background-size: cover;
-      background-position: center;
-      background-repeat: no-repeat;
-      filter: blur(6px) brightness(0.7);
-      z-index: -1;
+    .wrap {
+      width: min(520px, 100%);
     }
-    .login-box {
-      background: rgba(255,255,255,0.75);
-      box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.16), 0 1.5px 0 0 #e5e5e5 inset;
+    .card {
+      background: var(--panel);
+      border: 1px solid var(--stroke);
       border-radius: 18px;
-      max-width: 370px;
-      margin: 48px auto 0 auto;
-      padding: 2.2rem 1.5rem 2rem 1.5rem;
+      padding: 28px 24px 24px 24px;
+      box-shadow: var(--shadow);
+      backdrop-filter: blur(var(--blur));
       position: relative;
-      backdrop-filter: blur(2px);
-      display: flex;
-      flex-direction: column;
-      gap: 1.2rem;
+      overflow: hidden;
     }
-    .login-box h2 {
-      text-align: center;
-      font-size: 2rem;
-      font-weight: 700;
-      color: #005f73;
-      margin-bottom: 1.5rem;
-      letter-spacing: 0.5px;
-      text-shadow: 0 2px 8px rgba(0,0,0,0.04);
+    .card::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: radial-gradient(600px at 80% 0%, rgba(249,115,22,0.12), transparent 40%);
+      pointer-events: none;
+      z-index: 0;
+    }
+    header {
+      display: flex;
+      align-items: center;
+      gap: 12px;
+      margin-bottom: 12px;
+      position: relative;
+      z-index: 1;
+    }
+    .badge {
+      width: 56px;
+      height: 56px;
+      border-radius: 14px;
+      background: linear-gradient(135deg, var(--accent), var(--accent-2) 70%, #7c2d12 115%);
+      color: #fff7ed;
+      display: grid;
+      place-items: center;
+      font-weight: 800;
+      letter-spacing: 0.6px;
+      box-shadow: 0 10px 28px rgba(0,0,0,0.18);
+    }
+    h1 {
+      margin: 0;
+      font-size: 1.42rem;
+      letter-spacing: 0.6px;
+      line-height: 1.2;
+    }
+    p.subtitle {
+      margin: 4px 0 12px 0;
+      color: var(--muted);
+      font-weight: 600;
+      letter-spacing: 0.2px;
     }
     form {
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
+      position: relative;
+      z-index: 1;
+      display: grid;
+      gap: 12px;
+      margin-top: 6px;
+    }
+    label {
+      display: block;
+      font-weight: 700;
+      margin: 10px 0 4px 0;
+      color: var(--text);
+      letter-spacing: 0.2px;
     }
     input {
-      padding: 0.85rem 1rem;
-      border: 1.5px solid #005f73;
-      border-radius: 8px;
+      width: 100%;
+      padding: 13px 12px;
+      border-radius: 12px;
+      border: 1px solid var(--stroke);
+      background: linear-gradient(180deg, #ffffff, #fff6eb);
       font-size: 1rem;
-      background: #f7f7f7;
-      transition: border-color 0.2s;
-      color: #184d47;
+      color: var(--text);
+      transition: border 0.15s, box-shadow 0.15s, transform 0.12s;
     }
     input:focus {
-      border-color: #00aaff;
       outline: none;
-      background: #fff;
+      border-color: rgba(249,115,22,0.7);
+      box-shadow: 0 10px 28px rgba(249,115,22,0.18);
+      transform: translateY(-1px);
+      background: #ffffff;
     }
-    button {
-      padding: 0.85rem 1rem;
-      background: linear-gradient(90deg, #005f73 60%, #00aaff 100%);
-      color: #fff;
-      border: none;
-      border-radius: 8px;
-      font-size: 1.1rem;
-      font-weight: bold;
+    input::placeholder { color: #9a8f85; }
+    .btn-primary {
+      width: 100%;
+      margin-top: 10px;
+      padding: 14px 0;
+      border-radius: 12px;
+      border: 1px solid rgba(249,115,22,0.5);
+      background: linear-gradient(120deg, var(--accent) 20%, var(--accent-2) 100%);
+      color: #0c0c0c;
+      font-weight: 800;
+      letter-spacing: 0.4px;
       cursor: pointer;
-      transition: background 0.2s, transform 0.2s;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.10);
-      letter-spacing: 0.5px;
+      box-shadow: 0 12px 30px rgba(234,88,12,0.26);
+      transition: transform 0.12s ease, box-shadow 0.12s ease;
     }
-    button:active {
-      background: linear-gradient(90deg, #0099cc 60%, #005f73 100%);
-      transform: scale(0.98);
+    .btn-primary:active { transform: translateY(0); }
+    .support-row {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 10px;
+      margin-top: 12px;
+      color: var(--muted);
+      font-weight: 600;
     }
-    @media (max-width: 700px) {
-      .login-box {
-        max-width: 98vw;
-        margin-top: 18px;
-        padding: 1.2rem 0.5rem;
-      }
-      .login-box h2 { font-size: 1.3rem; }
-      button { font-size: 1rem; padding: 0.7rem 0.5rem; }
+    .link { color: var(--accent-2); font-weight: 800; cursor: pointer; }
+    .error { margin-top: 10px; min-height: 22px; color: #b91c1c; font-weight: 700; }
+    .inline-spinner {
+      display: none;
+      margin: 12px auto 0 auto;
+      border: 4px solid rgba(255,255,255,0.92);
+      border-top: 4px solid var(--accent);
+      border-radius: 50%;
+      width: 32px;
+      height: 32px;
+      animation: spin 0.8s linear infinite;
+      box-shadow: 0 8px 18px rgba(234,88,12,0.12);
     }
-    @media (max-width: 500px) {
-      .login-box {
-        max-width: 99vw;
-        margin-top: 8px;
-        padding: 0.7rem 0.2rem;
-      }
-      .login-box h2 { font-size: 1.1rem; }
-      button { font-size: 0.95rem; padding: 0.5rem 0.2rem; }
+    @keyframes spin { to { transform: rotate(360deg); } }
+    @media (max-width: 540px) {
+      body { padding: 12px; }
+      .card { padding: 22px 18px; border-radius: 16px; }
     }
   </style>
 </head>
 <body>
-  <div class="background"></div>
-  <div class="login-box">
-    <h2>Vendor Login</h2>
-    <form>
-      <input type="email" id="email" placeholder="Email" required autocomplete="username" />
-      <input type="password" id="password" placeholder="Password" required autocomplete="current-password" />
-      <button type="submit">Login</button>
-    </form>
+  <div class="wrap">
+    <div class="card">
+      <header>
+        <div class="badge" aria-hidden="true">VEN</div>
+        <div>
+          <h1>Vendor Access</h1>
+          <p class="subtitle">Secure login for cafeteria partners.</p>
+        </div>
+      </header>
+
+      <form id="loginForm">
+        <div>
+          <label for="email">Email</label>
+          <input type="email" id="email" placeholder="vendor@example.com" required autocomplete="username" />
+        </div>
+        <div>
+          <label for="password">Password</label>
+          <input type="password" id="password" placeholder="Enter password" required autocomplete="current-password" />
+        </div>
+        <button type="submit" class="btn-primary">Login</button>
+        <div class="inline-spinner" id="loginSpinner"></div>
+        <div class="error" id="loginError"></div>
+      </form>
+
+      <div class="support-row">
+        <span>Need access?</span>
+        <span class="link" onclick="alert('Please contact cafeteria admin to be added as a vendor.')">Contact admin</span>
+      </div>
+    </div>
   </div>
 
   <script type="module">
@@ -137,8 +216,17 @@
     // Ensure session persists across tabs and reloads
     setPersistence(auth, browserLocalPersistence);
 
-    document.querySelector("form").addEventListener("submit", async (e) => {
+    const loginForm = document.getElementById("loginForm");
+    const loginSpinner = document.getElementById("loginSpinner");
+    const loginError = document.getElementById("loginError");
+
+    const toggleSpinner = (on) => loginSpinner.style.display = on ? "block" : "none";
+
+    loginForm.addEventListener("submit", async (e) => {
       e.preventDefault();
+      loginError.textContent = "";
+      toggleSpinner(true);
+
       const email = document.querySelector("#email").value.trim();
       const password = document.querySelector("#password").value.trim();
 
@@ -156,11 +244,12 @@
           // Redirect to vendor dashboard with the vendorId
           window.location.href = `vendor-dashboard.html?vendor=${vendorId}`;
         } else {
-          alert("Unauthorized vendor: email not found in vendors collection.");
+          loginError.textContent = "Unauthorized vendor: email not found.";
         }
       } catch (error) {
-        alert("Login failed: " + error.message);
+        loginError.textContent = "Login failed. Please check your details.";
       }
+      toggleSpinner(false);
     });
   </script>
 </body>
