--- a/summary.html
+++ b/summary.html
@@ -4,13 +4,16 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Order Summary</title>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <script type="module">
+    import('./i18n.js').then(({ applyTranslations }) => applyTranslations());
+  </script>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet">
   <style>
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
-      font-family: 'Roboto', Arial, sans-serif;
+      font-family: 'Nunito', 'Inter', Arial, sans-serif;
       min-height: 100vh;
       box-sizing: border-box;
       background: transparent;
@@ -145,7 +148,7 @@
       padding: 0.5rem;
       border: 1px solid #ccc;
       border-radius: 8px;
-      font-family: 'Roboto', Arial, sans-serif;
+      font-family: 'Nunito', 'Inter', Arial, sans-serif;
       font-size: 1rem;
       resize: vertical;
       min-height: 60px;
@@ -336,7 +339,7 @@
           }, 60);
         });
     import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-app.js';
-    import { getFirestore, doc, getDoc, collection, addDoc, serverTimestamp, updateDoc, increment } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
+    import { getFirestore, doc, getDoc, collection, addDoc, serverTimestamp, updateDoc, setDoc, increment } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore.js';
     import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.12.2/firebase-auth.js';
 
     const firebaseConfig = {
@@ -503,9 +506,15 @@
 
     window.submitOrder = async function () {
       // Register service worker for FCM
+      let swReg = null;
       if ('serviceWorker' in navigator) {
-        await navigator.serviceWorker.register('firebase-messaging-sw.js');
-        console.log("Service worker registered");
+        try {
+          // Absolute path so GitHub Pages/hosting serve the correct script at site root
+          swReg = await navigator.serviceWorker.register('/firebase-messaging-sw.js');
+          console.log("Service worker registered", swReg.scope);
+        } catch (err) {
+          console.warn("Service worker registration failed", err);
+        }
       }
 
       onAuthStateChanged(auth, async (user) => {
@@ -541,7 +550,10 @@
           try {
             const messagingModule = await import('https://www.gstatic.com/firebasejs/10.12.2/firebase-messaging.js');
             const messaging = messagingModule.getMessaging(app);
-            fcmToken = await messagingModule.getToken(messaging, { vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bD0hWJ6mEO7lLwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KD0lqwKds" });
+            fcmToken = await messagingModule.getToken(messaging, {
+              vapidKey: "BK8WocQC93HpCQb9ysqai2Hah6bD0hWJ6mEO7lLwpL1enk7QVfudQr5CTV7KU43md78i4gT7jjHEo7KD0lqwKds",
+              serviceWorkerRegistration: swReg || undefined
+            });
           } catch (err) {
             console.warn("FCM token not available:", err);
           }
@@ -551,7 +563,7 @@
         if (!identity.isGuest && fcmToken) {
           try {
             const studentRef = doc(db, "students", identity.uid);
-            await updateDoc(studentRef, { fcmToken: fcmToken });
+            await setDoc(studentRef, { fcmToken: fcmToken }, { merge: true });
             console.log("🔥 FCM token saved for student:", identity.uid);
           } catch (err) {
             console.error("Error saving fcmToken to student:", err);
@@ -578,7 +590,7 @@
           // Award points
           if (!identity.isGuest) {
             const studentRef = doc(db, "students", identity.uid);
-            await updateDoc(studentRef, { points: increment(1) });
+            await setDoc(studentRef, { points: increment(1) }, { merge: true });
             alert("✅ Order submitted! 1 point awarded.");
           } else {
             alert("✅ Order submitted as guest.");
