--- a/menu.html
+++ b/menu.html
@@ -7,7 +7,23 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<meta name="theme-color" content="#f97316" />
 	<script type="module">
-		import('./i18n.js').then(({ applyTranslations }) => applyTranslations());
+		let applyTranslations = () => {};
+		try {
+			const mod = await import('./i18n.js');
+			applyTranslations = mod.applyTranslations || applyTranslations;
+		} catch (err) {
+			try {
+				const repoBase = window.location.pathname.split('/')[1] || '';
+				if (repoBase) {
+					const altUrl = `${window.location.origin}/${repoBase}/i18n.js`;
+					const mod = await import(altUrl);
+					applyTranslations = mod.applyTranslations || applyTranslations;
+				}
+			} catch (fallbackErr) {
+				console.warn('i18n failed to load; continuing without translations', fallbackErr);
+			}
+		}
+		applyTranslations();
 	</script>
 	<link rel="preconnect" href="https://fonts.googleapis.com" />
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
