--- a/menu-management.html
+++ b/menu-management.html
@@ -4,8 +4,27 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Menu Management</title>
+  <script type="module">
+    let applyTranslations = () => {};
+    try {
+      const mod = await import('./i18n.js');
+      applyTranslations = mod.applyTranslations || applyTranslations;
+    } catch (err) {
+      try {
+        const repoBase = window.location.pathname.split('/')[1] || '';
+        if (repoBase) {
+          const altUrl = `${window.location.origin}/${repoBase}/i18n.js`;
+          const mod = await import(altUrl);
+          applyTranslations = mod.applyTranslations || applyTranslations;
+        }
+      } catch (fallbackErr) {
+        console.warn('i18n failed to load; continuing without translations', fallbackErr);
+      }
+    }
+    applyTranslations();
+  </script>
   <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect x='6' y='6' width='52' height='52' rx='12' ry='12' fill='%23fff' stroke='%23f97316' stroke-width='2'/%3E%3Cpath fill='%23f97316' d='M18 14c4.2 0 7.6 3.4 7.6 7.6 0 3.2-1.8 6-4.6 7.1V46h-6V28.7c-2.8-1.1-4.6-3.9-4.6-7.1C10.4 17.4 13.8 14 18 14z'/%3E%3Cpath fill='%23ea580c' d='M34 14h4v10h2V14h4v10h2V14h4v12h-6v20h-6V26h-6z'/%3E%3C/svg%3E" />
-  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@600;700;800&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700;800&display=swap" rel="stylesheet" />
   <style>
     :root {
       --orange: #f97316;
